Fixed scrollbar bug for Firefox, added transition for partially-swiped profiles to return to start, some clean-up. Started implementing side navigation but should be made into an element

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,18 +9,17 @@ html, body {
   height: 100%;
   overflow: scroll;
   overflow-x: hidden;
+  scrollbar-width: none;
 }
-
+::-webkit-scrollbar {
+  width: 0px; /* remove scrollbar space */
+  background: transparent; /* make scrollbar invisible */
+}
 body {
   background-color: #FAFAFA;
   font-family: 'Helvetica Neue', Arial, sans-serif;
   font-weight: 300;
   text-align: center;
-}
-
-::-webkit-scrollbar {
-  width: 0px; /* remove scrollbar space */
-  background: transparent; /* make scrollbar invisible */
 }
 
 #fixed-buttons {
@@ -62,4 +61,48 @@ profile-element {
   right: 0;
   text-align: center;
   background-color: transparent;
+}
+
+/* The side navigation menu */
+#side-navigation {
+  height: 100%; /* 100% Full-height */
+  width: 0; /* 0 width - change this with JavaScript */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Stay on top */
+  top: 0; /* Stay at the top */
+  left: 0;
+  background-color: #111; /* Black*/
+  overflow-x: hidden; /* Disable horizontal scroll */
+  padding-top: 60px; /* Place content 60px from the top */
+  transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+}
+
+/* The navigation menu links */
+#side-navigation a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+/* When you mouse over the navigation links, change their color */
+#side-navigation a:hover {
+  color: #f1f1f1;
+}
+
+/* Position and style the close button (top right corner) */
+#side-navigation .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+@media screen and (max-height: 450px) {
+  #side-navigation {padding-top: 15px;}
+  #side-navigation a {font-size: 18px;}
 }
